--- a/app/src/main/res/menu/menu_add_funds.xml
+++ b/app/src/main/res/menu/menu_add_funds.xml
@@ -1,13 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.SMSActivity">
-    <item
-    android:id="@+id/add_funds"
-    android:orderInCategory="100"
-    android:title="Add Funds"
-    app:showAsAction="never" />
-
+    tools:context=".ui.AddFundsActivity">
     <item
         android:id="@+id/edit_account"
         android:orderInCategory="100"
