--- a/app/src/main/res/layout/activity_add_funds.xml
+++ b/app/src/main/res/layout/activity_add_funds.xml
@@ -11,29 +11,50 @@
 
 
     <TextView
+        android:id="@+id/add_funds_balance_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="Balance : "
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/add_funds_account_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/add_funds_balance"
+        android:text="Account  : "
+        android:textSize="25sp" />
+
+    <TextView
         android:id="@+id/add_funds_balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:text="Balance : "
-        android:textSize="30sp" />
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/add_funds_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/add_funds_balance"
-        android:layout_centerHorizontal="true"
-        android:text="Account"
-        android:visibility="visible"
-        android:textSize="30sp" />
+        android:text="Account : "
+        android:textSize="25sp" />
 
     <EditText
         android:id="@+id/add_funds_amount"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/add_funds_account"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="80dp"
+        android:layout_toLeftOf="@+id/add_fund_button"
         android:hint="Amount"
         android:inputType="number"
         android:textSize="28sp" />
@@ -42,10 +63,11 @@
         android:id="@+id/add_fund_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/add_funds_amount"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/add_funds_account"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/add_funds_amount"
+        android:layout_marginTop="80dp"
         android:text="Add" />
 
 
